--- a/index.html
+++ b/index.html
@@ -2,41 +2,45 @@
 <html>
 <head>
   <title>Library</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="library.js"></script>
 </head>
 <body>
 
 <dialog id="new-book-info">
-<div>
-    <span>Title:</span>
-    <input type="text" id="new-book-title"/>
+<div class="input-group m-2">
+    <input type="text" id="new-book-title" class="form-control" placeholder="Title" area-label="Title"/>
 </div>
-<div>
-    <span>Author:</span>
-    <input type="text" id="new-book-author"/>
+<div class="input-group m-2">
+    <input type="text" id="new-book-author" class="form-control" placeholder="Author" area-label="Author"/>
 </div>
-<div>
-    <span>Pages:</span>
-    <input type="number" min="1" value="1" id="new-book-pages"/>
+<div class="input-group m-2">
+    <input type="number" min="1" value="1" id="new-book-pages" class="form-control"/>
+    <span class="input-group-text">pages</span>
 </div>
-<div>
-    <span>Read:</span>
-    <input type="checkbox"  id="new-book-read"/>
+<div class="form-check m-2">
+    <input type="checkbox" id="new-book-read" class="form-check-input"/>
+    <label for="new-book-read" class="form-check-label">Read</label>
 </div>
-<div>
-    <button id="add-book">Add</button>
+<div class="form-check m-2">
+    <button id="add-book" class="btn btn-primary">Add</button>
+    <button id="cancel-book" class="btn btn-primary">Cancel</button>
 </div>
 </dialog>
 
-<button id="new-book">New book</button>
-<table id="library">
+<div class="m-2">
+    <button id="new-book" class="btn btn-primary">New book</button>
+</div>
+
+<table id="library" class="table">
     <thead>
     <tr>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Pages</th>
-        <th>Read</th>
-        <th></th>
+        <th scope="col">Title</th>
+        <th scope="col">Author</th>
+        <th scope="col">Pages</th>
+        <th scope="col">Read</th>
+        <th scope="col"></th>
     </tr>
     </thead>
     <tbody>
